--- a/style.css
+++ b/style.css
@@ -692,7 +692,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: #0A0A0A!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -713,7 +713,7 @@ h3 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: #0A0A0A!important;
 }
 
 .med-width-whitespace {
@@ -723,11 +723,11 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #0A0A0A!important;
 }
 
 h4 {
-    color: #333333!important;
+    color: #0A0A0A!important;
 }
 
 .icons {
@@ -736,7 +736,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #0A0A0A!important;
 }
 
 .portfolio-thumb {
@@ -780,7 +780,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F8C977;
-    color: #FFFFFF!important;
+    color: #0A0A0A!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -789,7 +789,7 @@ h4 {
 }
 
 .ltc-white {
-    color: #FFFFFF!important;
+    color: #0A0A0A!important;
 }
 
 .ltc-white:hover {
