--- a/style.css
+++ b/style.css
@@ -826,7 +826,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.pnj");
+    background-image: url("img/image-de-presentation.png");
 }
 
 @media (max-width: 1024px) {
